--- a/index.html
+++ b/index.html
@@ -586,14 +586,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <!-- Google Analytics 4 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMRB6QTGCV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HRBNM8YPTV"></script>
 <script nonce="48273">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   // Configuration of Google Analytics 4
-  gtag('config', 'G-ZMRB6QTGCV', {
+  gtag('config', 'G-HRBNM8YPTV', {
     'send_page_view': true,
     'linker': {
       'domains': ['site1.com', 'site2.com', 'site3.com']
